<resources>
    <string name="home_app_name">Home</string>
    <string name="home_menu">听单</string>
    <string name="home_listen_list">听单</string>
    <string name="home_rank">榜单</string>
    <string name="home_boutique">精品</string>
    <string name="home_book">看书</string>

    <string name="home_detail_subscription">+订阅</string>
    <string name="home_detail_subscribed">已订阅</string>
    <string name="home_detail_brief_introduction">内容简介</string>
    <string name="home_detail_join_membership">开通会员</string>

    <string name="home_detail_more">更多</string>
    <string name="home_top_list_week">周榜</string>
    <string name="home_top_list_month">月榜</string>
    <string name="home_top_list_all">总榜</string>

    <string name="home_menu_detail_add_collected">收藏听单</string>
    <string name="home_menu_detail_collected">已收藏</string>

    <string name="home_sequence">已连载</string>
    <string name="home_last">集</string>
    <string name="home_book_finished">已完结</string>
    <!--format String-->
    <string name="format_total_books" formatted="false">共%d本</string>
    <string name="home_swipe_open_detail">侧\n滑\n至\n列\n表</string>

    <string name="home_popular_list">热门榜</string>
    <string name="home_hot_list">热销榜</string>
    <string name="home_new_book_list">新书榜</string>
    <string name="home_search_list">搜索榜</string>
    <string name="home_praise_list">好评榜</string>


    <string name="home_audio_prefix">共</string>
    <string name="home_audio_suffix">本</string>
    <string name="home_detail_comment_hint">快来发表你的评论吧</string>
    <string name="home_top_10">TOP10</string>
    <string name="home_detail_hot_anchor">热门主播</string>
    <string name="home_vip_free">会员免费</string>
    <string name="home_hd_text">HD高清</string>
    <string name="home_money">¥2</string>
    <string name="home_unit">/ 集</string>
    <string name="home_comment_dialog_tips">优质评论有机会被推荐置顶</string>
    <string name="home_comment_dialog_hint">请输入您的评论内容</string>
    <string name="home_publish">发表</string>
    <string name="home_comment_input_limit">文字超过最大限制</string>

    <string name="home_comment_num" formatted="false">%d</string>
    <string name="home_comment_num_text">/200</string>
    <string name="home_comment_topped">1</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="home_detail_chapter_total">共%d集</string>
    <string name="home_play_all">全部播放</string>
    <string name="home_resume_pay">继续播放</string>
    <string name="home_pause_play">全部暂停</string>
    <string name="home_menu_detail_no_data">此页面空荡荡的…什么都没有</string>
    <string name="home_private_and_service">隐私政策及服务条款概要</string>
    <string name="home_agree_private_service">同意</string>
    <string name="home_not_use_private_service">暂不使用</string>
    <string name="home_private_service_content">欢迎你使用听书！我们将通过《听书用户个人信息保护及隐私政策协议》和《听书软件许可及服务协议》帮助你了解我们收集、使用、存储和共享个人信息的情况，特别是我们所采集的个人信息类型及其用途。同时，你还可以了解到你所享有的相关权利和实现途径以及我们为了保护好你的个人信息安全所采用的相关策略。如你同意，可以点击“同意”开始接受我们的服务。欢迎你使用听书！</string>
    <string name="home_private_protocol">《听书用户个人信息保护及隐私政策协议》</string>
    <string name="home_service_protocol">《听书软件许可及服务协议》</string>
</resources>

