<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeCommentDialogViewModel"
            type="com.rm.module_home.viewmodel.HomeCommentDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            isVisible="@{homeCommentDialogViewModel.inputComment.length()>20}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/business_shape_white_16dp"
            android:gravity="center"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/home_comment_input_limit"
            android:textColor="@color/business_color_ff5e5e"
            android:textSize="@dimen/business_text_size_16sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/business_text_color_ffffff"
            android:paddingStart="@dimen/dp_16"
            android:paddingTop="@dimen/dp_16"
            android:paddingEnd="@dimen/dp_16"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/home_dialog_comment_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/business_shape_f7f7f7_8dp"
                android:minHeight="@dimen/dp_120"
                android:orientation="vertical"
                android:padding="@dimen/dp_12"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/home_dialog_comment_ed"
                    afterTextChanged="@{homeCommentDialogViewModel.inputText}"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="top|start"
                    android:hint="@string/home_comment_dialog_hint"
                    android:textColor="@color/business_text_color_333333"
                    android:textSize="@dimen/business_text_size_14sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/home_dialog_comment_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    tools:text="20/20" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_comment_dialog_tips"
                android:textColor="@color/business_color_b1b1b1"
                android:textSize="@dimen/business_text_size_12sp"
                app:layout_constraintBottom_toBottomOf="@id/home_dialog_comment_publish"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_dialog_comment_publish" />

            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/home_dialog_comment_publish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:background="@{homeCommentDialogViewModel.inputComment.length()>0?@drawable/shape_red_20:@drawable/business_shape_round_e8e8e8_20dp}"
                android:clickable="@{homeCommentDialogViewModel.inputComment.length()>0 &amp;&amp; homeCommentDialogViewModel.inputComment.length()&lt;=200}"
                android:onClick="@{(view)->homeCommentDialogViewModel.clickSend(view)}"
                android:paddingStart="@dimen/dp_20"
                android:paddingTop="@dimen/dp_6"
                android:paddingEnd="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_6"
                android:text="@string/home_publish"
                android:textColor="@color/business_text_color_ffffff"
                android:textSize="@dimen/business_text_size_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_dialog_comment_bg" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>