<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.rm.module_home.viewmodel.HomeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_main_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_detail_icon"
                bindUrl="@{viewModel.detailInfoData.list.audio_cover_url}"
                corner="@{8.0f}"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/temp_detail_icon" />

            <androidx.appcompat.widget.AppCompatTextView
                bindText="@{viewModel.detailInfoData.list.play_count}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_2"
                android:drawableStart="@drawable/home_icon_play_ed"
                android:textColor="@color/businessWhite"
                app:layout_constraintBottom_toBottomOf="@id/home_detail_icon"
                app:layout_constraintEnd_toEndOf="@id/home_detail_icon"
                tools:text="14W" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_audio_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:maxLines="2"
                android:text="@{viewModel.detailInfoData.list.audio_name}"
                android:textColor="@color/business_text_color_333333"
                android:textSize="@dimen/business_text_size_18sp"
                app:layout_constraintStart_toEndOf="@id/home_detail_icon"
                app:layout_constraintTop_toTopOf="@id/home_detail_icon"
                tools:text="书名" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/home_detail_icon_author_ee"
                android:lines="1"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_6"
                android:text="@{viewModel.detailInfoData.list.nickname}"
                android:textColor="@color/business_text_color_666666"
                android:textSize="@dimen/business_text_size_12sp"
                app:layout_constraintStart_toStartOf="@id/home_detail_audio_name"
                app:layout_constraintTop_toBottomOf="@id/home_detail_audio_name"
                tools:text="作者：曹雪芹" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/home_detail_icon_anchor_ee"
                android:lines="1"
                android:text="@{viewModel.detailInfoData.list.author}"
                android:textColor="@color/business_text_color_666666"
                android:textSize="@dimen/business_text_size_12sp"
                app:layout_constraintStart_toStartOf="@id/home_detail_audio_name"
                app:layout_constraintTop_toBottomOf="@id/home_detail_author"
                tools:text="主播：小丸子的朋友" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/home_detail_btn_subscribe"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_26"
                android:background="@drawable/shape_red_20"
                android:gravity="center"
                android:onClick="@{()->viewModel.clickSubscribeFun(context)}"
                android:text="@{viewModel.isSubscribed?@string/home_detail_subscription:@string/home_detail_subscribed}"
                android:textColor="@color/businessWhite"
                app:layout_constraintBottom_toBottomOf="@+id/home_detail_icon"
                app:layout_constraintStart_toStartOf="@id/home_detail_audio_name" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_detail_collect_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_12"
                android:background="@drawable/shape_round"
                android:onClick="@{()->viewModel.clickCollectionFun(context)}"
                android:src="@drawable/business_icon_unfavorites"
                app:layout_constraintBottom_toBottomOf="@id/home_detail_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/home_detail_btn_subscribe" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_detail_tx_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_26"
            android:text="已连载12集"
            android:textColor="@color/business_text_color_666666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_main_tool_bar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_detail_tips_recycler_view"
            bindHorizontalLayout="@{viewModel.homeDetailTagsAdapter}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_14"
            app:layout_constraintTop_toBottomOf="@id/home_detail_tx_status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_detain_brief_introduction"
            isVisible="@{viewModel.detailInfoData.list.short_intro.length()>0}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/home_detail_brief_introduction"
            android:textColor="@color/business_text_color_333333"
            android:textSize="@dimen/business_text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detail_tips_recycler_view" />


        <com.rm.business_lib.wedgit.expandtextview.ExpandableTextView
            android:id="@+id/home_detail_brief"
            expandText="@{viewModel.detailInfoData.list.short_intro}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_4"
            android:textColor="@color/business_text_color_666666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_detain_brief_introduction"
            tools:text="@string/home_detail_brief_introduction" />

        <View
            android:id="@+id/home_detail_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_0.5dp"
            android:background="@color/business_color_e8e8e8"
            app:layout_constraintTop_toBottomOf="@id/home_detail_brief" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_detail_vip_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_detail_line">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_money"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/home_money"
                android:textColor="@color/business_color_ff5e5e"
                android:textSize="@dimen/business_text_size_26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_unit"
                android:textColor="@color/business_text_color_333333"
                android:textSize="@dimen/business_text_size_16sp"
                app:layout_constraintBottom_toBottomOf="@id/home_detail_money"
                app:layout_constraintStart_toEndOf="@+id/home_detail_money"
                app:layout_constraintTop_toTopOf="@id/home_detail_money" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_free_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/business_shape_stroke_rect_ff5e5e"
                android:paddingStart="@dimen/dp_4"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/home_vip_free"
                android:textColor="@color/business_color_ff5e5e"
                android:textSize="@dimen/business_text_size_8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_detail_money" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_hd_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:background="@drawable/business_shape_stroke_rect_ffba56"
                android:paddingStart="@dimen/dp_4"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/home_hd_text"
                android:textColor="@color/business_color_ffba56"
                android:textSize="@dimen/business_text_size_8sp"
                app:layout_constraintStart_toEndOf="@id/home_detail_free_tips"
                app:layout_constraintTop_toBottomOf="@id/home_detail_money" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/business_select_attention"
                android:paddingStart="@dimen/dp_20"
                android:paddingTop="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_20"
                android:paddingBottom="@dimen/dp_5"
                android:text="@string/home_detail_join_membership"
                android:textColor="@color/business_color_ff5e5e"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/home_detail_join_membership" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_detail_anchor_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/shape_radius_f7f7f7"
            app:layout_constraintTop_toBottomOf="@id/home_detail_vip_cl">

            <!-- 主播 -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/home_detail_anchor_url"
                bindUrl="@{viewModel.detailInfoData.list.anchor.anchor_avatar}"
                isCircle="@{true}"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="#3f00" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_anchor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@{viewModel.detailInfoData.list.anchor.anchor_name}"
                android:textColor="@color/business_text_color_333333"
                android:textSize="@dimen/business_text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/home_detail_anchor_url"
                app:layout_constraintTop_toTopOf="@id/home_detail_anchor_url"
                tools:text="@string/app_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/home_detail_anchor_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:background="@drawable/business_shape_stroke_rect_ffba56"
                android:paddingStart="@dimen/dp_4"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/home_detail_hot_anchor"
                android:textColor="@color/business_color_ffba56"
                android:textSize="@dimen/business_text_size_8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/home_detail_anchor_name" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_8"
                android:background="@drawable/business_shape_stroke_rect_ffba56"
                android:paddingStart="@dimen/dp_4"
                android:paddingTop="@dimen/dp_2"
                android:paddingEnd="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_2"
                android:text="@string/home_top_10"
                android:textColor="@color/business_color_ffba56"
                android:textSize="@dimen/business_text_size_8sp"
                app:layout_constraintBottom_toBottomOf="@id/home_detail_anchor_tips"
                app:layout_constraintStart_toEndOf="@id/home_detail_anchor_tips"
                app:layout_constraintTop_toTopOf="@id/home_detail_anchor_tips" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_anchor_attention"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_26"
                android:background="@{viewModel.isAttention ? @drawable/business_un_select_attention  : @drawable/business_select_attention}"
                android:drawableStart="@{viewModel.isAttention ? @drawable/business_icon_attention_eb : @drawable/business_icon_attention_ea}"
                android:drawablePadding="@dimen/dp_4"
                android:onClick="@{()->viewModel.clickAttentionFun(context,viewModel.detailInfoData.list.anchor.anchor_follows)}"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_15"
                android:paddingTop="@dimen/dp_5"
                android:paddingEnd="@dimen/dp_15"
                android:paddingBottom="@dimen/dp_5"
                android:text="@{viewModel.isAttention ? @string/business_followed : @string/business_attention}"
                android:textColor="@{viewModel.isAttention ? @color/business_text_color_666666 : @color/business_color_ff5e5e}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_detail_drag_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@color/business_text_color_ffffff"
            app:layout_constraintTop_toBottomOf="@id/home_detail_anchor_cl">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/detail_comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_detail_comment"
                android:textColor="@color/business_text_color_333333"
                android:textSize="@dimen/business_text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@drawable/business_shape_round_f7f7f7_12dp"
                android:hint="@string/home_detail_comment_hint"
                android:onClick="@{()->viewModel.clickCommentFun(context)}"
                android:paddingStart="@dimen/dp_12"
                android:paddingTop="@dimen/dp_9"
                android:paddingEnd="@dimen/dp_12"
                android:paddingBottom="@dimen/dp_9"
                android:textColor="@color/business_text_color_333333"
                android:textSize="@dimen/business_text_size_14sp"
                app:layout_constraintTop_toBottomOf="@id/detail_comment_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>